# pokeapi-ingest-rs

./: .gitignore  Cargo.toml  devenv.nix  flake.nix
src/: main.rs
src/cli/: args.rs
src/fetcher/: errors.rs  mod.rs  pokemon_fetcher.rs  progress.rs
src/models/: pokemon.rs
